infra/k8s/nats-depl.yaml
# Very important: we're working with `NATS Streaming Server`, NOT simply `NATS` - NATS Streaming Server is a separate application built
# on top of NATS. So, in documentation etc., always look read in the NATS Streaming Server section, not just NATS.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          # args is a list of arguments provided to the primary command that gets executed when our container is built out of our image.
          # We can pass e.g. command line options from the nats streaming server documentation.
          args: [
              "-p",
              "4222",
              "-m",
              "8222",
              # "hb" stands for "hearbeat", a little request that NATS will send to all of its connected clients every X seconds (5s in this case).
              # This is a healthcheck to make sure that these clients are still up and running. `-hbi` defines how often such healtcheck is going to occur.
              # `-hbt` defines how long the clients have to respond. `-hbf` defines how often the clients are allowed to fail before NATS is going to assume
              # that that connection is dead and gone.
              "-hbi",
              "5s",
              "-hbt",
              "5s",
              "-hbf",
              "2",
              "-SD",
              # `-cid` stands for clusterId - this is going to assign an id to the cluster, here, `ticketing`.
              "-cid",
              "ticketing",
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
